# arculator-mac

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  configure  configure.ac  mac-install.sh  mac-setup
.claude/commands/: sync-upstream.md
configs/: A5000.cfg
podules/aeh50/src/: Makefile.am
podules/aeh54/src/: Makefile.am
podules/aka05/src/: Makefile.am
podules/aka10/src/: Makefile.am
podules/aka12/src/: Makefile.am
podules/aka16/src/: Makefile.am
podules/aka31/src/: Makefile  Makefile.am  Makefile.in  aka31.h
podules/common/joystick/: joystick_sdl2.c
podules/common/midi/: midi_alsa.c
podules/common/net/: ne2000.h  net.h
podules/common/net/slirp/: ip.h  ip_input.c  misc.c
podules/common/sound/: sound_out_sdl2.c
podules/designit_e200/src/: Makefile  Makefile.am
podules/lark/src/: Makefile  Makefile.am  Makefile.in  lark.h
podules/midimax/src/: Makefile  Makefile.am  Makefile.in
podules/morley_uap/src/: Makefile.am
podules/oak_scsi/src/: Makefile.am
podules/pccard/src/: Makefile  Makefile.am  Makefile.in
podules/ultimatecdrom/src/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  arc.h  colourcard.c  disc.h  disc_hfe.c  fpa.c  g16.c  g332.c  g332.h  hostfs.c  ide_a3in.c  ide_idea.c  ide_riscdev.c  ide_zidefs.c  ide_zidefs_a3k.c  input_sdl2.c  keyboard.c  keyboard.h  lc.c  main.c  podules-unix.c  podules-win.c  sound.c  sound_sdl2.c  st506_akd52.c  vidc.c  vidc.h  video_sdl2.c  wd1770.c  wx-app.cc  wx-main.cc  wx-podule-config.cc  wx-sdl2.c
